<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/edit_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:hint="@string/prompt_telephone"
                android:imeActionId="6"
                android:imeOptions="actionUnspecified"
                android:layout_margin="15dp"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_verify_code"
                android:layout_width="0dp"
                android:layout_marginTop="25dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

            <Button
                android:id="@+id/get_verify_code"
                android:background="@drawable/button_shape"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:text="@string/get_verify_code"
                android:textColor="@color/default_item_checkCircle_borderColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:shadowRadius="30"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/new_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_new_password"
                android:inputType="textPassword"
                android:layout_margin="10dp" />

            <Button
                android:id="@+id/modify_pwd_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/commit_new_password"
                android:textStyle="bold"
                android:background="@drawable/button_shape"
                android:textColor="@color/default_item_checkCircle_borderColor"/>


        </LinearLayout>


    </LinearLayout>





</LinearLayout>